<resources>
    <!-- General names -->
    <string name="app_name">AppSenzen</string>
    <string name="menu_settings">Settings</string>
    <string name="tab_classes">Classes</string>
    <string name="tab_dashboard">Dashboard</string>
    <string name="tab_timetable">Timetable</string>

    <!-- Settings Menu -->
    <string name="delete_title">Delete all data</string>
    <string name="delete_summary">Delete all data, this cannot be undone</string>
    <string name="button_delete_yes">Delete</string>
    <string name="button_delete_no">Cancel</string>
    <string name="delete_success">All data has been deleted</string>



    <string name="add_class">Add Class</string>

    <string name="pushups_per_skip">Pushups/Skipped lesson</string>

    <string name="add_class_prompt">Please enter the following:</string>

    <string name="button_add_class_confirm">Add Class</string>

    <string name="add_class_input">class name</string>

    <string name="class_name">class name</string>

    <string name="title_student">Student</string>
    <string name="student_name">Student Name</string>
    <string name="student_class">Class</string>
    <string name="pushups_to_do">Pushups to do</string>
    <string name="missing_today">Missing today</string>
    <string name="pushups_done">Pushups done</string>
    <string name="missing_log">Missing log</string>
    <string name="no_class">No class</string>


</resources>
