<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar">

        <TextView
                android:id="@+id/title"
                android:text="@string/title_student"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>

    </androidx.appcompat.widget.Toolbar>

    <TextView
            android:text="@string/student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"/>

    <TextView
            android:text="@string/student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_name"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/text_class"/>

    <TextView
            android:text="@string/student_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="32dp"/>

    <TextView
            android:text="@string/student_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_class"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textViewPushups"/>

    <TextView
            android:text="@string/pushups_to_do"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            android:layout_marginTop="32dp"/>

    <TextView
            android:text="@string/pushups_to_do"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPushups"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/pushupsdoneButton"/>

    <Button
            android:text="@string/missing_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/missingButton"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginTop="32dp"/>

    <Button
            android:text="@string/pushups_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pushupsdoneButton"
            app:layout_constraintBaseline_toBaselineOf="@+id/missingButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"/>

    <TextView
            android:text="@string/missing_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_missing_log"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/missingButton"
            app:layout_constraintStart_toStartOf="@+id/missingButton"
            android:layout_marginTop="32dp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/list_missing_log"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_missing_log"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>