<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddClassActivity">

    <TextView
            android:text="@string/add_class_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.397"/>
    <EditText
            android:layout_width="140dp"
            android:layout_height="42dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText"
            android:autofillHints="none"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="24dp"
            android:hint="@string/add_class_input" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/button_add_class_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonAddClass"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            android:layout_marginTop="32dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>