<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:elevation="4dp"
                app:layout_scrollFlags="scroll|enterAlways"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                    android:id="@+id/title"
                    android:text="@string/app_name"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    />

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:tabSelectedTextColor="@android:color/white"
                app:tabTextColor="@android:color/white"
                app:tabMode="fixed">

            <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_classes"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/tab_classes"/>

            <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_dashboard"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/tab_dashboard"/>

            <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_timetable"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/tab_timetable"/>
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAddClass"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_add_black_24dp"/>
    

</androidx.coordinatorlayout.widget.CoordinatorLayout>